WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
58162
Negative spread should not make a sharp corner rounded
https://bugs.webkit.org/show_bug.cgi?id=58162
Summary
Negative spread should not make a sharp corner rounded
Simon Fraser (smfr)
Reported
2011-04-08 13:50:04 PDT
The 6th box in LayoutTests/fast/box-shadow/inset-box-shadows.html has incorrect results now.
Attachments
Patch
(99.92 KB, patch)
2011-04-08 16:49 PDT
,
Hajime Morrita
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2011-04-08 13:50:22 PDT
Regression from
bug 49726
?
Simon Fraser (smfr)
Comment 2
2011-04-08 13:54:09 PDT
Also seen in LayoutTests/fast/box-shadow/inset.html
Hajime Morrita
Comment 3
2011-04-08 16:48:42 PDT
Hi Simon, thank you for noticing this. I'm fixing this. The patch will come shortly. Rounded rects and squared rects should be handled differently. But my last change that you pointed out didn't do such.
Hajime Morrita
Comment 4
2011-04-08 16:49:38 PDT
Created
attachment 88899
[details]
Patch
Hajime Morrita
Comment 5
2011-04-08 17:01:01 PDT
Committed
r83360
: <
http://trac.webkit.org/changeset/83360
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug