2011-04-08  MORITA Hajime  <morrita@google.com>

Reviewed by Simon Fraser.

        Negative spread should not make a sharp corner rounded
        https://bugs.webkit.org/show_bug.cgi?id=58162

        Updated the result. This new result matches other browsers behavior.

        * platform/mac/fast/box-shadow/inset-expected.checksum:
        * platform/mac/fast/box-shadow/inset-expected.png:
2011-04-08  MORITA Hajime  <morrita@google.com>

        Reviewed by Simon Fraser.

        Negative spread should not make a sharp corner rounded
        https://bugs.webkit.org/show_bug.cgi?id=58162

        Handled inset shadow path for rounded and non-rounded rect
        differently as normal shadow path is doing.

        * rendering/RenderBoxModelObject.cpp:
        (WebCore::RenderBoxModelObject::paintBoxShadow):

Canonical link: https://commits.webkit.org/73132@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83360 268f45cc-cd09-0410-ab3c-d52691b4dbfc